infra/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trial-backend
  labels:
    app.kubernetes.io/name: trial-backend
    app.kubernetes.io/instance: trial-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: trial-backend
      app.kubernetes.io/instance: trial-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trial-backend
        app.kubernetes.io/instance: trial-backend
    spec:
      serviceAccountName: trial-backend
      automountServiceAccountToken: true
      containers:
        - name: trial-backend
          image: trial-backend
          imagePullPolicy: IfNotPresent                                                   
          ports:
            - name: http-svc
              containerPort: 3030
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 2
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   successThreshold: 3
          #   timeoutSeconds: 2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
