infra/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trial-backend
  labels:
    app.kubernetes.io/name: trial-backend
    app.kubernetes.io/instance: trial-backend
    app.kubernetes.io/version: "1.0.0"
spec:
  type: NodePort
  ports:
    - port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app.kubernetes.io/name: trial-backend
    app.kubernetes.io/instance: trial-backend
